# demos_curtos

./: README.md
BME680/: README.md  lcd_pcf8574.py  testebmp680.py
CH32V003/epaper/: Makefile  README.md  epaper.c  epaper.elf  epaper.hex  epaper.lst  epaper.map  font_8x8.h
CH32V003/epaper12/: Makefile  README.md  epaper12.c  epaper12.elf  epaper12.hex  epaper12.lst  epaper12.map  font_12x16.h
CH32V003/ringdemo/: Makefile  README.md  ringdemo.c  ringdemo.elf  ringdemo.hex  ringdemo.lst  ringdemo.map
DemoLCD3Digitos/: CMakeLists.txt  DemoLCD3Digitos.c  gera_pinos.py
Demo_Stamp_S3/: Demo_Stamp_S3.ino
ESP32C6_LCD_147/Demo/: Demo.ino
ESP32C6_LCD_147/Zigbee_Temperature_Sensor/: Zigbee_Temperature_Sensor.ino
ESP32C6_LCD_147/Zigbee_Thermostat/: Zigbee_Thermostat.ino
ESP32S3N16R8/Demo_Depura/: Demo_Depura.ino
ESP32S3N16R8/Demo_ESP32S3B/: Demo_ESP32S3B.ino  LCD12864.ino  secrets.h
ESP32_Mini/: README.md
ESP32_Mini/AP/: AP.ino
ESP32_Mini/Placa/: Placa.ino
ESP32_Mini/tstc2/: CMakeLists.txt  sdkconfig
Nano_ESP32/Demo_Nano_ESP32/: Demo_Nano_ESP32.ino  secrets.h
PCA9685/TesteServos/: TesteServos.ino
Pico2/: README.md
Pico2/gpiobug/: CMakeLists.txt  gpiobug.c  gpiobug.fzz
Pico2/gpiobug/pico/: gpiobug.uf2
Pico2/gpiobug/pico2/: gpiobug.uf2
Pico2/picobench/: CMakeLists.txt  picobench.c
Pico2W/: README.md
Pico2W/BLE/: ble_temp.py
Pico2W/SNTP/: .gitignore  CMakeLists.txt  README.md  SNTP.c  SNTP.h  lcd.c  lcd.h  main.c
Pico2W/WiFi_RGB/: demo_wifi_rgb.py
RP2350B_Max_W/: rasterize.py
RP2350B_Max_W/demo/: demo.ino  (+1 more)
SHT40/: testesht40.py
(+10 files in other folders)
